<resources>
    <string name="app_name">Money Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_nav_transactions">Transactions</string>
    <string name="title_nav_summary">Summary</string>
    <string name="title_nav_accounts">Accounts</string>
    <string name="title_nav_categories">Categories</string>
    <string name="title_nav_settings">Settings</string>

    <string name="fab_menu_title_expenses">Expenses</string>
    <string name="fab_menu_title_income">Income</string>
    <string name="fab_menu_title_transfer">Transfer</string>

    <string name="account_bank">Bank</string>
    <string name="account_wallet">Wallet</string>
    <string name="account_other">Other</string>

    <string name="dialog_title_account_icon">Select Account Icon</string>
    <string name="dialog_title_account_color">Select Account Color</string>
    <string name="dialog_title_category_color">Select Color</string>
    <string name="dialog_title_category_icon">Select Category Icon</string>
    <string name="dialog_title_delete_transaction">Delete Transaction</string>
    <string name="dialog_body_delete_transaction">Are you really want to delete the transaction?</string>
    <string name="dialog_positive_delete">Delete</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_title_delete_account">Delete Account</string>
    <string name="dialog_body_delete_account">Deleting account will delete all records associate with.This can not be reverse.</string>
    <string name="dialog_title_delete_category">Delete Category</string>
    <string name="dialog_body_delete_category">Deleting category will delete all records associate with.This can not be reverse.</string>

    <string name="activity_title_add_income_category">Add Income Category</string>
    <string name="activity_title_add_expense_category">Add Expense Category</string>
    <string name="activity_title_add_account">Add Account</string>
    <string name="activity_title_add_income">Add Income</string>
    <string name="activity_title_add_expense">Add Expense</string>
    <string name="activity_title_add_transfer">Make Transfer</string>
    <string name="activity_title_edit_expense_category">Edit Expense Category</string>
    <string name="activity_title_edit_income_category">Edit Income Category</string>
    <string name="activity_title_edit_account">Edit Account</string>
    <string name="activity_title_edit_income">Edit Income</string>
    <string name="activity_title_edit_expense">Edit Expense</string>
    <string name="activity_title_edit_transfer">Edit Transfer</string>

    <string name="done">Done</string>
    <string name="initial_balance">Initial Balance</string>
    <string name="name">Name</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="source">Source</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transfer">Transfer</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>

    <!--app shortcuts -->
    <string name="shortcut_long_label_transfer">Transfer Money</string>
    <string name="shortcut_short_label_transfer">Transfer</string>
    <string name="shortcut_long_label_expense">Add Expense</string>
    <string name="shortcut_short_label_expense">Expense</string>
    <string name="shortcut_long_label_income">Add Income</string>
    <string name="shortcut_short_label_income">Income</string>

    <!--admob testing ad unit-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="analytic_tag_transaction">transaction</string>
    <string name="analytic_tag_expenses">expenses</string>
    <string name="analytic_tag_income">income</string>
    <string name="analytic_tag_transfer">transfer</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount_not_valid">Please Add valid amount</string>
    <string name="validation_no_enough_balance">No enough balance in account</string>
    <string name="action_filter">Filter</string>
    <string name="account_summery">Account Summary</string>
    <string name="expense_summery">Expense Summary</string>
    <string name="balance">Balance</string>
    <string name="total">Total</string>
    <string name="no_summary_yet">No Summary yet</string>
    <string name="pref_accounts_category_name">Accounts</string>
    <string name="pref_title_default_expense_account">Expense Account</string>
    <string name="pref_summary_default_expense_account">Select Default Expense Account</string>


    <string name="cd_select_account_icon">select account icon</string>
    <string name="cd_select_account_color">select account color</string>
    <string name="cd_select_category_icon">select category icon</string>
    <string name="cd_select_category_color">select category color</string>
    <string name="cd_filter_all">filter all transaction</string>
    <string name="cd_filter_income">filter income transaction</string>
    <string name="cd_filter_expense">filter expense transaction</string>
    <string name="cd_filter_transfer">filter transfer transaction</string>
    <string name="cd_next_month">go to next month</string>
    <string name="cd_last_month">go to last month</string>
    <string name="cd_account_icon">%s account icon</string>
    <string name="cd_category_icon">%s category icon</string>
    <string name="cd_transaction_icon">%s transaction icon</string>
</resources>
