<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transactions"
            android:title="@string/title_nav_transactions" />
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_summary"
            android:title="@string/title_nav_summary" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_account"
            android:title="@string/title_nav_accounts" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/title_nav_categories" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_nav_settings" />
    </group>

</menu>
