<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_add_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layoutDirection="@integer/layout_direction"
            tools:context="com.sanath.moneytracker.ui.activities.AddAccountActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAccountName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textAlignment="viewStart"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAccountBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAccountName">

            <EditText
                android:id="@+id/editTextBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/initial_balance"
                android:inputType="numberDecimal"
                android:textAlignment="viewStart"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/buttonIconSelector"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gray_circle"
            android:contentDescription="@string/cd_select_account_icon"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAccountBalance"/>

        <ImageView
            android:id="@+id/buttonColorSelector"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gray_circle"
            android:contentDescription="@string/cd_select_account_color"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toEndOf="@+id/buttonIconSelector"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAccountBalance"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
