<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sanath.moneytracker.ui.fragments.TransactionsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        </android.support.v7.widget.RecyclerView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textViewMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Feb"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonLeft"
                app:layout_constraintLeft_toRightOf="@+id/imageButtonLeft"
                app:layout_constraintRight_toLeftOf="@+id/imageButtonRight"
                app:layout_constraintTop_toTopOf="@+id/imageButtonLeft" />

            <ImageButton
                android:id="@+id/imageButtonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_right_arrow" />

            <ImageButton
                android:id="@+id/imageButtonLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_left_arrow" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="6dp"
        app:menu_animationDelayPerItem="50"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="@color/colorRed700"
        app:menu_colorPressed="@color/colorRed500"
        app:menu_colorRipple="@color/colorRipple"
        app:menu_fab_hide_animation="@anim/fab_slide_out_to_right"
        app:menu_fab_show_animation="@anim/fab_slide_in_from_right"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/fab_add"
        app:menu_labels_colorNormal="@color/fabLabelsColorNormal"
        app:menu_labels_colorPressed="@color/fabLabelsColorPressed"
        app:menu_labels_colorRipple="@color/fabLabelsColorRipple"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_ellipsize="none"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_margin="0dp"
        app:menu_labels_maxLines="-1"
        app:menu_labels_padding="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_position="left"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_textColor="@color/fabLabelsTextColor"
        app:menu_labels_textSize="14sp"
        app:menu_openDirection="up"
        app:menu_shadowColor="@color/fabShadowColor"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menuItemIncome"
            style="@style/FabStyleIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/fab_menu_title_income"
            android:src="@drawable/ic_income" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menuItemTransfer"
            style="@style/FabStyleTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/fab_menu_title_transfer"
            android:src="@drawable/ic_transfer" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menuItemExpenses"
            style="@style/FabStyleExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/fab_menu_title_expenses"
            android:src="@drawable/ic_expense" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
